# man

./: CMakeLists.txt
Resources/Recipes/: default_recipes.json
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  SampleManager.cpp  SampleManager.h  SampleSound.cpp  SampleSound.h  SampleVoice.cpp  SampleVoice.h
Source/Export/: AudioExporter.cpp  AudioExporter.h  VideoExporter.cpp  VideoExporter.h
Source/Model/: Clip.cpp  Clip.h  DiscoveryLog.cpp  DiscoveryLog.h  Element.cpp  Element.h  ElementLibrary.cpp  ElementLibrary.h  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h  Sketch.cpp  Sketch.h
Source/Network/: YouTubeDownloader.cpp  YouTubeDownloader.h
Source/UI/Arrangement/: ArrangementView.cpp  ArrangementView.h  ClipComponent.cpp  ClipComponent.h  ElementPalette.cpp  ElementPalette.h  Timeline.cpp  Timeline.h  TrackLane.cpp  TrackLane.h  TransportBar.cpp  TransportBar.h
Source/UI/Browser/: BrowserDragSource.h  BrowserSidebar.cpp  BrowserSidebar.h  SoundBrowserPanel.cpp  SoundBrowserPanel.h  VisualBrowserPanel.cpp  VisualBrowserPanel.h  VisualParamEditor.cpp  VisualParamEditor.h  YouTubeBrowserPanel.cpp  YouTubeBrowserPanel.h
Source/UI/Common/: ModeSelector.cpp  ModeSelector.h  PageIndicator.cpp  PageIndicator.h  SwipeContainer.cpp  SwipeContainer.h  TouchConstants.h  VisualPreview.cpp  VisualPreview.h
Source/UI/Discovery/: CombineBar.cpp  CombineBar.h  CombineZone.cpp  CombineZone.h  DiscoveryAnimation.cpp  DiscoveryAnimation.h  DiscoveryPanel.cpp  DiscoveryPanel.h  DiscoveryView.cpp  DiscoveryView.h  ElementEditor.cpp  ElementEditor.h  ElementTile.cpp  ElementTile.h  SoundPanel.cpp  SoundPanel.h  VisualPanel.cpp  VisualPanel.h
Source/UI/Live/: LiveView.cpp  LiveView.h  TriggerGrid.cpp  TriggerGrid.h  TriggerPad.cpp  TriggerPad.h
Source/Visuals/: CompositeVisual.cpp  CompositeVisual.h  GeometricVisual.cpp  GeometricVisual.h  ImageVisual.cpp  ImageVisual.h  ParticleVisual.cpp  ParticleVisual.h  VideoDecoder.h  VideoDecoder.mm  VideoVisual.cpp  VideoVisual.h  VisualCanvas.cpp  VisualCanvas.h  VisualRenderer.cpp  VisualRenderer.h  WaveformVisual.cpp  WaveformVisual.h
